# chat-net-proj

./: .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  chat-net-client.cpp  client.cpp  client.h  gui.cpp  gui.h  logger.h
server/: CMakeLists.txt  chat-net-serv.cpp  logger.h  server.cpp  server.h  sql.cpp  sql.h  sqlcon.cpp  sqlcon.h
server/proto/: CMakeLists.txt  chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h  chat.proto
